--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,22 @@
             <div class="center">
               <div class="logo" style=""></div>
               <div class="socials">
-                <a href="https://github.com/webdiscus/parallax-3d-lens-effect">
-                  <button class="btn btn-github">View on GitHub</button>
+                <a href="https://x.com/ooklapeet" target="_blank">
+                  <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
+                  <div class="twitter">Ooklapeet</div>
+                </a>
+                <a href="https://x.com/flablablabs">
+                  <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
+                  <div class="twitter">FlablabLabs</div>
                 </a>
               </div>
             </div>
-            <div class="right"></div>
+            <div class="right">
+              <video controls width="250">
+                <source src="/src/images/IMG_0245.mov" type="video/mov" />
+                Your browser does not support the video tag.
+              </video>
+            </div>
           </div>
         </div>
         <div class="layers__item layer-3-rain">
