--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             <!-- <h1>3D parallax effect <span class="block">HTML / CSS</span></h1> -->
             <!-- <div class="subtitle">Creating a beautiful 3D website with a ‘lens effect’</div> -->
             <div class="center">
-              <div class="logo" style=""></div>
+              <div class="logo"></div>
               <div class="socials">
                 <a href="https://x.com/ooklapeet" target="_blank">
                   <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
