--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,9 @@
                   <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
                   <div class="twitter">Ooklapeet</div>
                 </a>
-                <a href="https://x.com/flablablabs">
+                <a href="https://x.com/flablablabs" target="_blank">
                   <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
-                  <div class="twitter">FlablabLabs</div>
+                  <div class="twitter">Flablab Labs</div>
                 </a>
               </div>
             </div>
