--- a/src/index.html
+++ b/src/index.html
@@ -19,21 +19,23 @@
             <div class="left">
               <div class="content-div">
                 <h2>Halloo, I&apos;m Ooklapeet!</h2>
-                I&apos;m an NFT artist and the Creative Director for <a href="#" target="_blank"> FlabLab Labs</a>.
+                I&apos;m an NFT artist and the Creative Director for
+                <a href="flablabla.bs" target="_blank"> FlabLab Labs</a>.
               </div>
               <div class="content-div">
                 In my real life, I&apos;m a gallery-repped artist. I&apos;ve performed and written comedy in Chicago and
-                Los Angeles at <a href="#" target="_blank">The Second City</a>,
-                <a href="#" target="_blank">The Groundlings</a>, and <a href="#" target="_blank">UCB</a>. I&apos;ve
-                written for <a href="#" target="_blank">Clickhole</a> and a few animated TV shows. (SAG/AFTRA, WGA)
+                Los Angeles at <a href="https://www.secondcity.com" target="_blank">The Second City</a>,
+                <a href="https://groundlings.com" target="_blank">The Groundlings</a>, and
+                <a href="https://ucbcomedy.com/" target="_blank">UCB</a>. I&apos;ve written for
+                <a href="https://clickhole.com" target="_blank">Clickhole</a> and a few animated TV shows. (SAG/AFTRA,
+                WGA)
               </div>
-              <div class="content-div">
-                I really love making shit. I hope you enjoy it— (the aforementioned shit that is.)
-              </div>
-              <div class="signoff"><span class="span-content">Heart emoji, Ook</span></div>
+              <div class="signoff">I really love making shit. I hope you enjoy it—</div>
+              <div class="signoff">(the aforementioned shit that is.)</div>
+              <div class="signoff"><span class="span-content">Big Heart Emoji, Ook</span></div>
               <div class="upcoming-div">
-                <span class="upcoming">Upcoming</span> - 111 Ooklapeet! NFTs “Hello, World” Collection auction. May 31,
-                2024. (link soon.)
+                <span class="upcoming">Upcoming</span> - Ooklapeet! “Hello, World” Collection mint / auction on
+                Kreate.art (link soon.)
               </div>
             </div>
             <!-- <h1>3D parallax effect <span class="block">HTML / CSS</span></h1> -->
@@ -52,10 +54,11 @@
               </div>
             </div>
             <div class="right">
-              <video controls width="250">
-                <source src="/src/images/IMG_0245.mov" type="video/mov" />
-                Your browser does not support the video tag.
-              </video>
+              <div id="video-container"></div>
+              <!-- Container where the video will be appended -->
+
+              <script src="/src/scripts/app.js"></script>
+              <!-- Webpack output file that includes your JavaScript code -->
             </div>
           </div>
         </div>
