--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,14 @@
               </div>
             </div>
             <div class="right">
-              <div id="video-container"></div>
+              <div id="video-container">
+                <iframe
+                  src="https://drive.google.com/file/d/16rSajVG5yT7uXcI0_aUtAZ8OiIAM-OYU/preview"
+                  width="640"
+                  height="480"
+                  allow="autoplay"></iframe>
+              </div>
               <!-- Container where the video will be appended -->
-
-              <script src="/src/scripts/app.js"></script>
-              <!-- Webpack output file that includes your JavaScript code -->
             </div>
           </div>
         </div>
