formatting and text fix

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,13 @@
                 In my real life, I&apos;m a gallery-repped artist. I&apos;ve performed and written comedy in Chicago and
                 Los Angeles at <a href="https://www.secondcity.com" target="_blank">The Second City</a>,
                 <a href="https://groundlings.com" target="_blank">The Groundlings</a>, and
-                <a href="https://ucbcomedy.com/" target="_blank">UCB</a>. I&apos;ve written for
-                <a href="https://clickhole.com" target="_blank">Clickhole</a> and a few animated TV shows. (SAG/AFTRA,
-                WGA)
+                <a href="https://ucbcomedy.com/" target="_blank">UCB</a>. I&apos;ve written for two prominent satirical
+                websites and a few animated TV shows.and a few animated TV shows. <br />(SAG/AFTRA, WGA)
               </div>
-              <div class="signoff">I really love making shit. I hope you enjoy it—</div>
-              <div class="signoff">(the aforementioned shit that is.)</div>
-              <div class="signoff"><span class="span-content">Big Heart Emoji, Ook</span></div>
+              <div class="content-div">I really love making shit.</div>
+              <div class="content-div">I hope you enjoy it—</div>
+              <div class="content-div">(the aforementioned shit that is.)</div>
+              <div class="signoff content-div"><span class="span-content">Very Big Heart Emoji, Ook</span></div>
               <div class="upcoming-div">
                 <span class="upcoming">Upcoming</span> - Ooklapeet! “Hello, World” Collection mint / auction on
                 Kreate.art (link soon.)
