--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 Los Angeles at <a href="https://www.secondcity.com" target="_blank">The Second City</a>,
                 <a href="https://groundlings.com" target="_blank">The Groundlings</a>, and
                 <a href="https://ucbcomedy.com/" target="_blank">UCB</a>. I&apos;ve written for two prominent satirical
-                websites and a few animated TV shows.and a few animated TV shows. <br />(SAG/AFTRA, WGA)
+                websites and a few animated TV shows. <br />(SAG/AFTRA, WGA)
               </div>
               <div class="content-div">I really love making shit.</div>
               <div class="content-div">I hope you enjoy it—</div>
@@ -49,18 +49,21 @@
                 </a>
                 <a href="https://x.com/flablablabs" target="_blank">
                   <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
-                  <div class="twitter">Flablab Labs</div>
+                  <div class="twitter">FlabLab Labs</div>
                 </a>
               </div>
             </div>
             <div class="right">
-              <div id="video-container">
+              <div style="position: relative; min-width: 560px; min-height: 350px">
                 <iframe
-                  src="https://drive.google.com/file/d/16rSajVG5yT7uXcI0_aUtAZ8OiIAM-OYU/preview"
-                  width="640"
-                  height="480"
-                  allow="autoplay"></iframe>
+                  src="https://player.vimeo.com/video/958140679?badge=0&autopause=0&player_id=0&app_id=58479"
+                  frameborder="0"
+                  allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
+                  title="Ooklapeet Reel"></iframe>
               </div>
+              <script src="https://player.vimeo.com/api/player.js"></script>
+
               <!-- Container where the video will be appended -->
             </div>
           </div>
