--- a/src/index.html
+++ b/src/index.html
@@ -35,26 +35,43 @@
               <div class="signoff content-div"><span class="span-content">Very Big Heart Emoji, Ook</span></div>
               <div class="upcoming-div">
                 <span class="upcoming">Upcoming</span> - Ooklapeet! “Hello, World” Collection mint / auction on
-                Kreate.art (link soon.)
+                <a href="https://kreate.art/@ooklapeet" target="_blank">Kreate.art</a>
               </div>
             </div>
             <!-- <h1>3D parallax effect <span class="block">HTML / CSS</span></h1> -->
             <!-- <div class="subtitle">Creating a beautiful 3D website with a ‘lens effect’</div> -->
             <div class="center">
               <div class="logo"></div>
+
               <div class="socials">
                 <a href="https://x.com/ooklapeet" target="_blank">
                   <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
                   <div class="twitter">Ooklapeet</div>
                 </a>
-                <a href="https://x.com/flablablabs" target="_blank">
-                  <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
+                <a href="https://www.instagram.com/ooklapeet/" target="_blank">
+                  <button class="btn btn-github"><i class="fa-brands fa-instagram"></i></button>
+                  <div class="twitter">Instagram</div>
+                </a>
+                <a href="https://www.flablablabs.com" target="_blank">
+                  <button class="btn btn-github"><i class="fa fa-solid fa-flask"></i></button>
                   <div class="twitter">FlabLab Labs</div>
+                </a>
+                <a href="https://www.saatchiart.com/ooklapeet" target="_blank">
+                  <button class="btn btn-github"><i class="fa fa-solid fa-o"></i></button>
+                  <div class="twitter">Originals</div>
+                </a>
+                <a href="https://www.inprnt.com/gallery/ooklapeet/" target="_blank">
+                  <button class="btn btn-github"><i class="fa fa-solid fa-p"></i></button>
+                  <div class="twitter">Prints</div>
+                </a>
+                <a href="https://kreate.art/@ooklapeet" target="_blank">
+                  <button class="btn btn-github"><i class="fa fa-solid fa-n"></i></button>
+                  <div class="twitter">NFTs</div>
                 </a>
               </div>
             </div>
             <div class="right">
-              <div style="position: relative; min-width: 560px; min-height: 350px">
+              <div class="video-container">
                 <iframe
                   src="https://player.vimeo.com/video/958140679?badge=0&autopause=0&player_id=0&app_id=58479"
                   frameborder="0"
