fix scroll height hopefully

--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,11 @@
               <div class="content-div">I hope you enjoy it—</div>
               <div class="content-div">(the aforementioned shit that is.)</div>
               <div class="signoff content-div"><span class="span-content">Very Big Heart Emoji, Ook</span></div>
-              <div class="upcoming-div">
+              <div class="upcoming-div content-div">
                 <span class="upcoming">Upcoming</span> - Ooklapeet! “Hello, World” Collection mint / auction on
                 <a href="https://kreate.art/@ooklapeet" target="_blank">Kreate.art</a>
               </div>
+              <div class="spacer"></div>
             </div>
             <!-- <h1>3D parallax effect <span class="block">HTML / CSS</span></h1> -->
             <!-- <div class="subtitle">Creating a beautiful 3D website with a ‘lens effect’</div> -->
