--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
               <div class="content-div">
                 <h2>Halloo, I&apos;m Ooklapeet!</h2>
                 I&apos;m an NFT artist and the Creative Director for
-                <a href="flablabla.bs" target="_blank"> FlabLab Labs</a>.
+                <a href="https://www.flablablabs.com" target="_blank"> FlabLab Labs</a>.
               </div>
               <div class="content-div">
                 In my real life, I&apos;m a gallery-repped artist. I&apos;ve performed and written comedy in Chicago and
@@ -37,14 +37,7 @@
                 <span class="upcoming">Upcoming</span> - Ooklapeet! “Hello, World” Collection mint / auction on
                 <a href="https://kreate.art/@ooklapeet" target="_blank">Kreate.art</a>
               </div>
-              <div class="spacer"></div>
-            </div>
-            <!-- <h1>3D parallax effect <span class="block">HTML / CSS</span></h1> -->
-            <!-- <div class="subtitle">Creating a beautiful 3D website with a ‘lens effect’</div> -->
-            <div class="center">
-              <div class="logo"></div>
-
-              <div class="socials">
+              <div class="socials mobile">
                 <a href="https://x.com/ooklapeet" target="_blank">
                   <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
                   <div class="twitter">Ooklapeet</div>
@@ -53,8 +46,41 @@
                   <button class="btn btn-github"><i class="fa-brands fa-instagram"></i></button>
                   <div class="twitter">Instagram</div>
                 </a>
-                <a href="https://www.flablablabs.com" target="_blank">
-                  <button class="btn btn-github"><i class="fa fa-solid fa-flask"></i></button>
+                <a href="https://x.com/flablablabs" target="_blank">
+                  <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
+                  <div class="twitter">FlabLab Labs</div>
+                </a>
+                <a href="https://www.saatchiart.com/ooklapeet" target="_blank">
+                  <button class="btn btn-github"><i class="fa fa-solid fa-o"></i></button>
+                  <div class="twitter">Originals</div>
+                </a>
+                <a href="https://www.inprnt.com/gallery/ooklapeet/" target="_blank">
+                  <button class="btn btn-github"><i class="fa fa-solid fa-p"></i></button>
+                  <div class="twitter">Prints</div>
+                </a>
+                <a href="https://kreate.art/@ooklapeet" target="_blank">
+                  <button class="btn btn-github"><i class="fa fa-solid fa-n"></i></button>
+                  <div class="twitter">NFTs</div>
+                </a>
+              </div>
+              <div class="spacer"></div>
+            </div>
+            <!-- <h1>3D parallax effect <span class="block">HTML / CSS</span></h1> -->
+            <!-- <div class="subtitle">Creating a beautiful 3D website with a ‘lens effect’</div> -->
+            <div class="center">
+              <div class="logo"></div>
+
+              <div class="socials desktop">
+                <a href="https://x.com/ooklapeet" target="_blank">
+                  <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
+                  <div class="twitter">Ooklapeet</div>
+                </a>
+                <a href="https://www.instagram.com/ooklapeet/" target="_blank">
+                  <button class="btn btn-github"><i class="fa-brands fa-instagram"></i></button>
+                  <div class="twitter">Instagram</div>
+                </a>
+                <a href="https://x.com/flablablabs" target="_blank">
+                  <button class="btn btn-github"><i class="fa-brands fa-x-twitter"></i></button>
                   <div class="twitter">FlabLab Labs</div>
                 </a>
                 <a href="https://www.saatchiart.com/ooklapeet" target="_blank">
